--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "chip8-emulator-rs"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/alzhu1/chip8-emulator-rs"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
